# simple-calculator

./: Cargo.toml  README.md
src/: annotations.rs  ast.rs  errors.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  operations.rs  parser.rs  tokens.rs
src/errors/: app_error.rs  interpreter_error.rs  lex_error.rs  parse_error.rs  print_error.rs
src/lexer/: inner.rs  lex_errors.rs
src/parser/: inner.rs  ops.rs
src/parser/inner/: atom.rs  expr.rs  expr1.rs  expr2.rs  expr3.rs
src/tokens/: annotations.rs  locations.rs
