[package]
name = "simple-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.17", features = ["error", "display", "from"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
